fix: removed redundancy